deployment/openldap/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: ${OPENLDAP_APP_NAME}
    annotations:
        kubernetes.io/ingress.class: nginx
        nginx.ingress.kubernetes.io/rewrite-target: /
        nginx.ingress.kubernetes.io/ssl-redirect: 'true'
        # certmanager.k8s.io/cluster-issuer: 'letsencrypt-http01'
    labels:
        app: ${OPENLDAP_APP_NAME}
spec:
    tls:
    -   secretName: ${OPENLDAP_FQN}
        hosts:
        - ${OPENLDAP_FQN}
    rules:
    -   host: ${OPENLDAP_FQN}
        http:
            paths:
            -   path: /
                pathType: Prefix
                backend:
                    service:
                        name: ${OPENLDAP_APP_NAME}
                        port:
                            name: http
